--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "typecheck": "tsc --noEmit",
+    "format": "prettier --write 'src/**/*.{ts,tsx}'"
   },
   "dependencies": {
     "next": "12.0.7",
@@ -13,7 +15,11 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^16.11.12",
+    "@types/react": "^17.0.37",
     "eslint": "7.32.0",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "prettier": "2.5.1",
+    "typescript": "^4.5.2"
   }
 }
