--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "format": "prettier --write 'src/**/*.{ts,tsx}'"
+    "format": "prettier --write 'src/**/*.{ts,tsx}'",
+    "test": "jest"
   },
   "dependencies": {
     "next": "12.0.7",
@@ -15,11 +16,15 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@testing-library/react": "^12.1.2",
+    "@types/jest": "^27.0.3",
     "@types/node": "^16.11.12",
     "@types/react": "^17.0.37",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.7",
+    "jest": "^27.4.3",
     "prettier": "2.5.1",
+    "ts-jest": "^27.1.1",
     "typescript": "^4.5.2"
   }
 }
