--- a/package.json
+++ b/package.json
@@ -8,7 +8,17 @@
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
     "format": "prettier --write 'src/**/*.{ts,tsx}'",
-    "test": "jest"
+    "test": "jest",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{css,less,sass,scss}": [
+      "stylelint --fix"
+    ]
   },
   "dependencies": {
     "next": "12.0.7",
@@ -22,7 +32,9 @@
     "@types/react": "17.0.37",
     "eslint": "8.4.1",
     "eslint-config-next": "12.0.7",
+    "husky": "^7.0.4",
     "jest": "27.4.4",
+    "lint-staged": "^12.1.2",
     "prettier": "2.5.1",
     "ts-jest": "27.1.1",
     "typescript": "4.5.3"
