--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     ]
   },
   "dependencies": {
+    "eslint-config-prettier": "^8.5.0",
     "next": "12.1.4",
     "react": "18.0.0",
     "react-dom": "18.0.0"
