--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "jest": "27.5.1",
     "lint-staged": "12.3.7",
     "prettier": "2.6.2",
+    "stylelint": "^14.6.1",
+    "stylelint-config-recommended": "^7.0.0",
     "ts-jest": "27.1.4",
     "typescript": "4.6.3"
   }
