--- a/package.json
+++ b/package.json
@@ -22,15 +22,15 @@
   },
   "dependencies": {
     "eslint-config-prettier": "^8.5.0",
-    "next": "12.1.4",
-    "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "next": "^12.1.6",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0"
   },
   "devDependencies": {
     "@testing-library/react": "13.1.1",
     "@types/jest": "27.4.1",
-    "@types/node": "16.11.32",
-    "@types/react": "18.0.8",
+    "@types/node": "^17.0.31",
+    "@types/react": "^18.0.8",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.4",
     "husky": "7.0.4",
@@ -40,6 +40,6 @@
     "stylelint": "14.8.1",
     "stylelint-config-recommended": "^7.0.0",
     "ts-jest": "27.1.4",
-    "typescript": "4.6.4"
+    "typescript": "^4.6.4"
   }
 }
